--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ flex-flow: wrap;
 flex-flow: wrap;
 background-color: #33aa77;
 width: 50%;
-height: 625px;
+height: 600px;
 margin: 0px 0px;
 }
 .about{
@@ -62,6 +62,9 @@ width: 50%;
 margin-left: 25%;
 margin-right: auto;
 border-radius: 270px;
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 h1{
