--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ padding: 0;
 font-family: 'Open Sans', sans-serif;
 }
 
+body{
+background-color: #424242;
+}
+
 .menu{
 /* position: absolute; */
 width: 100%;
@@ -43,11 +47,30 @@ width: 50%;
 height: 600px;
 margin: 0px 0px;
 }
+
+
 .about{
 background-color:  #3299BB;
 }
 .skills{
 background-color:  #424242;
+}
+
+/* PROJECTS */
+
+.projects{
+     background-color: #424242;
+     width:  auto;
+     height: 700px;
+}
+
+/* Contato */
+
+.contato{
+width: 100%;
+height: 500px;
+background-color: #3299BB;
+
 }
 
 /* ABOUT */
@@ -57,14 +80,17 @@ width: 100%;
 display: block;
 }
 .fotoPerfil img{
+
+
+
 margin-top: 15px;
 width: 50%;
 margin-left: 25%;
 margin-right: auto;
 border-radius: 270px;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
+animation: foto 0.6s;
 }
 
 h1{
@@ -199,8 +225,40 @@ azul
  #3299BB
 */
 
+/* FOOTER */
+
+footer{
+width: 100%;
+padding-top: 2px;
+padding-bottom: 2px;
+background-color:  #424242;
+}
+footer p{
+padding: 25px;
+text-align: center;
+}
+
 
 /*ANIMAÇÕES*/
+
+
+
+@keyframes foto{
+   /* 0% {   transform: scaleY(1);       }
+ 25% {   transform: scaleY(1.05);       }
+50% {   transform: scaleY(1.0);       }
+ 75% {   transform: scaleY(1.05);       }
+    100% {  transform: scaleY(1);          } */
+
+    0% {   transform: rotate(0deg);   }
+ 25% {   transform: rotate(7deg);       }
+50% {   transform: rotate(-5deg);    }
+ 75% {   transform: rotate(12deg);   }
+100% {  transform: rotate(0deg);    }
+
+
+}
+
 @keyframes bar-30{
     0% {width: 0%;}
     100% {width: 30%;}
@@ -239,24 +297,6 @@ azul
     0% {width: 0%;}
     100% {width: 87%;}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
