--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body{
 background-color: #424242;
 }
 
+
+
+
 .menu{
 /* position: absolute; */
 width: 100%;
@@ -64,13 +67,47 @@ background-color:  #424242;
      height: 700px;
 }
 
-/* Contato */
+/* Contato  -------------------------------- */ 
+
+.cnt-c{
+
+width: 100%;
+height: auto;
+display: flex;
+flex-direction: row;
+flex-flow: wrap;
+}
+.box-3{
+flex-flow: wrap;
+background-color: #33aa77;
+width: 33.3333%;
+margin: 0px 0px;
+}
+
+
 
 .contato{
 width: 100%;
-height: 500px;
+height: 300px;
 background-color: #3299BB;
+}
+.contato ul{
+margin-top: 40px;
+text-align: center;
+display: inline-block;
+}
+.contato ul li{
+display: inline-block;
+padding-top: 30px;
+}
 
+.contato #wpp{
+color: white;
+background-color: #424242;
+padding: 25px 45px;
+width: 40px;
+border-radius: 15px;
+text-decoration: none;
 }
 
 /* ABOUT */
@@ -80,9 +117,6 @@ width: 100%;
 display: block;
 }
 .fotoPerfil img{
-
-
-
 margin-top: 15px;
 width: 50%;
 margin-left: 25%;
@@ -119,7 +153,7 @@ margin: 20px 20px;
 }
 
 
-/* SKILLS */
+/* SKILLS ----------------------------------- */
 .skill{ margin-top: 25px;}
 .skillName{margin-top: 12px;}
 .barra{
@@ -302,6 +336,13 @@ text-align: center;
 
 @media(max-width: 720px){
 .box{ width: 100%; }
+
+.contato ul li{
+display: inline-block;
+padding-top: 55px;
+}
+
+
 }
 
 @media(max-width:720px){
